kubernetes/app/brewer-deployment.yaml
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: brewer
  namespace: dev-to
spec:
  selector:
    matchLabels:
      app: brewer
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: brewer
    spec:
      containers:
        - image: rfaguiar/brewer
          name: brewer
          ports:
            - containerPort: 8080
