kubernetes/app/brewer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: brewer
  namespace: dev-to
spec:
  ports:
    - port: 8080
  selector:
    app: brewer
  clusterIP: None
